Began work on index file, added contact page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <link rel="stylesheet" href="./Resources/CSS/style.css" type="text/css">
     </head>
     <body>
+        <nav class='top'>
+            <h1>Collier Engel</h1>
+            <ul class="nav-items">
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+            </ul>
+        </nav>
         
     </body>
     <footer>
