added icon and icon files

--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
             </nav>
 
         <main>   
-            <div id='about-me'>
+            <section id='about-me'>
                 <h1>About Me</h1>
                 <p>about me paragraph</p>
                 <img src="" alt="Image of me"> <!get an image of yourself>
             
 
-            </div>
-            <div id='projects'>
+            </section>
+            <section id='projects'>
+                <h1>Projects</h1>
                 <details class="project">
                     <summary class="project-title">
                         project 1
@@ -39,10 +40,19 @@
                 <details class="project">
                     <summary class="project-title">
                         project 3
-                        <p>project 3</p>
+                    
                     </summary>
+                    <p>project 3</p>
                 </details>
-            </div>
+            </section>
+            <section id="skills">
+                <h1>Skills</h1>
+                <img src="./Resources/html5.png" alt="html5 icon">
+                <img src="./Resources/CSS3.png" alt="css3 icon">
+                <img src="./Resources/JS.png" alt="JS icon">
+                <img src="./Resources/git.png" alt="git icon">
+                <img src="./Resources/github.png" alt="github icon">
+            </section>
         </main> 
     </body>
     <footer>
